Fix issue with ShowData arrow shifting

--- a/src/components/ShowData/ShowData.css
+++ b/src/components/ShowData/ShowData.css
@@ -17,6 +17,7 @@
 }
 
 .active {
+    composes: normal;
     animation: tab-rotate 2s normal;
     animation-fill-mode: forwards;
     -webkit-filter: none;
